# monitro

./: Cargo.toml  build.rs
src/: icons.rs  main.rs  qdc.rs  sdc.rs
